fixed z-index problem with look collage and user popup-menu

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -419,7 +419,7 @@ button
   ul
     float: left
     +horizontal-list(0)
-    z-index: 10
+    z-index: 999
     position: relative
     margin-top: -1px
     overflow: visible
